Bug 60212 - [Bisected] Weston black output
Summary: [Bisected] Weston black output
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Abdiel Janulgue
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-03 04:02 UTC by Scott Moreau
Modified: 2013-02-04 18:31 UTC (History)
5 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Proposed fix (599 bytes, patch)
2013-02-04 11:23 UTC, Abdiel Janulgue
Details | Splinter Review

Description Scott Moreau 2013-02-03 04:02:52 UTC
With latest mesa on Sandybridge, the weston output is black with cursor. This is true for both x11 and drm backends. Weston nor weston-desktop-shell crashes and the compositor is fully functional. I bisected to find this as the culprit:

11f5c82e8383fff00edd943209100cc1c9a1424b is the first bad commit
commit 11f5c82e8383fff00edd943209100cc1c9a1424b
Author: Abdiel Janulgue <abdiel.janulgue@linux.intel.com>
Date:   Wed Nov 28 15:10:33 2012 +0200

    intel: Create a miptree using offsets in intel_set_texture_image_region
    
    When binding a region to a texture image, re-create the miptree base-level
    considering the offset and dimension information exported by DRIImage.
    
    v8: - Move the alignment surface address checks from the image-from-texture
          code to the texture-from-image side. This allows the error reporting to conform to
          OES_EGL_Image and to prevent mixing up EGL and GL errors. Reported by Chad Versace.
        - Addressed an existing issue in renderbuffer case where there is a
          a possibility of creating EGL images out of depthstencil textures which isn't
          really possible. This was spotted by Eric earlier.
    
    Reviewed-by: Eric Anholt <eric@anholt.net> (v6)
    Reviewed-by: Chad Versace <chad.versace@linux.intel.com> (v8)
    Signed-off-by: Abdiel Janulgue <abdiel.janulgue@linux.intel.com>

:040000 040000 357888e370259225fda01324625fc78c3186de93 71e6725f72609e2018b40f0a9cce976d0d18a04a M	src


I am not sure if this only affects i965 but I am posting it here since it's the driver I am using. This is with latest wayland stack from git.
Comment 1 Abdiel Janulgue 2013-02-04 11:23:08 UTC
Created attachment 74168 [details] [review]
Proposed fix

Ok. I forgot to setup the dimension in the image from planar setup which is the likely cause of this issue. Please try the attach patch which should fix this case.
Comment 2 Tiago Vignatti 2013-02-04 11:56:46 UTC
this was just tested by me, meaning it works now as expected:

Tested-by: Tiago Vignatti <tiago.vignatti@intel.com>
Comment 3 Scott Moreau 2013-02-04 14:44:58 UTC
(In reply to comment #1)
> Created attachment 74168 [details] [review] [review]
> Proposed fix
> 
> Ok. I forgot to setup the dimension in the image from planar setup which is
> the likely cause of this issue. Please try the attach patch which should fix
> this case.

Hi, thanks for the quick response. This patch fixes the problem here as well.

Tested-by: Scott Moreau <oreaus@gmail.com>
Comment 4 Chad Versace 2013-02-04 18:23:50 UTC
Abdiel, when you begin working on a bug, please assign it to yourself. If you leave the bug in the NEW state, someone may begin working on it, duplicating your efforts.

Fix is now applied to master.
Change to RESOLVED/FIXED.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.